force-app/main/default/objects/Symptom_Specialty_Map__c/Symptom_Specialty_Map__c.object-meta.xml
<CustomObject>
    <description>Smart Navigator demo: map patient symptom phrases to a recommended specialty label (education/navigation only, not diagnosis).</description>
    <label>Symptom Specialty Map</label>
    <nameField>
        <label>Rule Name</label>
        <length>80</length>
        <type>Text</type>
    </nameField>
    <pluralLabel>Symptom Specialty Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>