force-app/main/default/objects/Symptom_Specialty_Map__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Exclude from matching when false.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>