force-app/main/default/objects/Symptom_Specialty_Map__c/fields/Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer__c</fullName>
    <description>Safe disclaimer text (e.g. not medical advice; emergencies).</description>
    <label>Disclaimer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>