force-app/main/default/objects/Symptom_Specialty_Map__c/fields/Keyword_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Pattern__c</fullName>
    <description>Token or short phrase matched against user text (case-insensitive contains). One pattern per row or multiple rows per team convention.</description>
    <label>Keyword Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>