force-app/main/default/objects/Symptom_Specialty_Map__c/fields/Match_Priority__c.field-meta.xml
<CustomField>
    <fullName>Match_Priority__c</fullName>
    <description>Higher wins when multiple rows match.</description>
    <label>Match Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>