force-app/main/default/objects/Symptom_Specialty_Map__c/fields/Recommended_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Specialty__c</fullName>
    <description>Must align with Specialty.Name or substring used in HC_DirectoryInvocable (e.g. Medical Oncology).</description>
    <label>Recommended Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>