force-app/main/default/objects/Symptom_Specialty_Map__c/fields/Routing_Summary__c.field-meta.xml
<CustomField>
    <fullName>Routing_Summary__c</fullName>
    <description>One or two sentences the agent may say before directory lookup (non-clinical).</description>
    <label>Routing Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>