force-app/main/default/objects/Symptom_Specialty_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Keyword_Pattern__c</columns>
    <columns>Recommended_Specialty__c</columns>
    <columns>Match_Priority__c</columns>
    <columns>Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>